tests/assignment/error_lvalue_num.say
1 = 2; // error: Invalid assignment